--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>edu.boisestate</groupId>
+  <groupId>dev.fmsea</groupId>
   <artifactId>muRelBench</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
@@ -66,7 +66,7 @@
               <finalName>${uberjar.name}</finalName>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>edu.boisestate.murelbench.Main</mainClass>
+                  <mainClass>dev.fmsea.murelbench.Main</mainClass>
                 </transformer>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
               </transformers>
